kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapi
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: myapi.com
    http:
      paths:
      - backend:
          service:
            name: myapi
            port:
              number: 80
        path: /
        pathType: Prefix
